# nesthub

./: .env.example  .gitignore  MODULES.md  README.md  nixpacks.toml  pyproject.toml  pytest.ini  railway.json  requirements.txt  structure.txt
examples/: hello_world_button.html
nethub_runtime/: __init__.py  main.py
scripts/: readme.md  run_isolated_runtime_regression.sh  run_regression.sh
test/: conftest.py  core_api_test_report.txt  core_budget_scene_report.md  core_budget_scene_report_short_20260415_211921.md  core_budget_scene_report_short_20260415_212106.md  core_budget_scene_report_short_20260415_212640.md  core_budget_scene_report_short_20260415_213543.md  gen_core_budget_scene_report.py  gen_core_budget_scene_report_short.py  overall_test_cases_family_agent_workflow.md  test_budget_scene_e2e_regression.py  test_capability_router_runtime_capabilities.py  test_core_api.py  test_core_budget_scene.py  test_core_engine_agent_runtime.py  test_core_engine_runtime.py  test_core_plus_pipeline.py  test_core_plus_provider.py  test_document_runtime.py  test_execution_coordinator_regression.py  test_execution_repair_loop.py  test_external_contact_agent_runtime.py  test_family_member_agent_runtime.py  test_generated_artifact_store.py  test_image_generation_verification.py  test_information_agent_promoted_memory_query.py  test_information_agent_service_unit.py  test_information_task_session_memory.py  test_intent_runtime_knowledge.py  test_local_first_acquisition.py  test_memory_promotion_service.py  test_model_router_local_profile.py  test_model_router_runtime.py  (+16 more)
(+787 files in other folders)
